# 10_MA_SC

./: .cproject  .gitignore  .project  10MA_SC.pro  CMakeLists.txt  README.md  更新历史.txt
.metadata/: version.ini
.metadata/.plugins/org.eclipse.core.resources/.projects/RemoteSystemsTempFiles/org.eclipse.egit.core/: GitProjectData.properties
.metadata/.plugins/org.eclipse.core.resources/.root/: 2.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.desktop-1b2qbug_32559/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.desktop-1b2qbug_32559/FP.local.files_0/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.desktop-1b2qbug_32559/H.local_16/: node.properties
.metadata/.plugins/org.eclipse.tcf.debug/: peers.ini
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
Debug/: 10MA_SC_Module.elf.size  makefile  objects.mk  sources.mk
Debug/src/: geometry_data.d  inifile.d  subdir.mk  variable.d
Debug/src/Algorithm/: subdir.mk
Debug/src/alarm_processor/: alarm_processor.d  subdir.mk
Debug/src/channel/: channel_control.d  channel_engine.d  subdir.mk
Debug/src/communication/: ad_communication.d  mc_communication.d  subdir.mk
Debug/src/compiler/: compile_message.d  compiler_data.d  parser.d  subdir.mk
Debug/src/parameter/: parm_manager.d  subdir.mk
Debug/src/pmc/: pmc_axis_ctrl.d  pmc_register.d  subdir.mk
Debug/src/tool_compensate/: subdir.mk  tool_comp_data.d
Release/: 10MA_SC_Module.elf  10MA_SC_Module.elf.size  10MA_SC_Module_MultiChn_1213.elf  10MA_SC_Module_MultiChn_AE_tcp_long.elf  ToolCompensate.d  makefile  objects.mk  project.map  root@192.168.100.100  tool_compensate.d
Release/src/: global_structure.d  global_var_func.d  main.d  subdir.mk  trace.d
Release/src/Algorithm/: coord_processor.d  subdir.mk
Release/src/alarm_processor/: subdir.mk
Release/src/channel/: channel_mode_group.d  subdir.mk
Release/src/communication/: hmi_communication.d  mi_communication.d  subdir.mk
Release/src/compiler/: compiler.d  lexer.d  subdir.mk
Release/src/parameter/: subdir.mk
Release/src/pmc/: subdir.mk
Release/src/tool_compensate/: subdir.mk  tool_compensate.d  tool_compensate_data.d
Release/trace/alarm/: alarmfile.txt
Release/trace/trace/: logfile_bak.txt  tracefile.txt
Release/trace/trace/alarm/: alarmfile.txt
Release/trace/trace/trace/: logfile.txt
cmake/: arm_linux_setup.cmake
doc/: PMC地址表.xlsx  SC功能整理.vsdx
inc/: axis_status_ctrl.h  circular_buffer.h  data_stack.h  geometry_data.h  global_definition.h  global_include.h  global_structure.h  hmi_shared_data.h  inifile.h  list_buffer.h  servo_guide.h  showsc.h  singleton.h  sync_axis_ctrl.h  trace.h  variable.h
inc/Algorithm/: coord_processor.h
inc/alarm_processor/: alarm_processor.h
inc/channel/: channel_control.h  channel_data.h  channel_engine.h  channel_mode_group.h
inc/communication/: ad_communication.h  comm_data_definition.h  hmi_communication.h  mc_communication.h  mc_communication_arm.h  mi_communication.h
inc/compiler/: compile_message.h  compiler.h  compiler_data.h  lexer.h  parser.h
inc/parameter/: backup_info.h  parm_definition.h  parm_manager.h
inc/pmc/: pmc_axis_ctrl.h  pmc_register.h
inc/spindle/: spindle_control.h
inc/tool_compensate/: rs274.h  tool_comp_data.h  tool_compensate.h  tools_comp.h
lib/inc/: license_interface.h  mosquittopp.h
src/: axis_status_ctrl.cpp  geometry_data.cpp  global_structure.cpp  global_var_func.cpp  inifile.cpp  main.cpp  servo_guide.cpp  showsc.cpp  sync_axis_ctrl.cpp  trace.cpp  variable.cpp
src/Algorithm/: coord_processor.cpp
src/alarm_processor/: alarm_processor.cpp
src/channel/: channel_control.cpp  channel_engine.cpp  channel_mode_group.cpp
src/communication/: ad_communication.cpp  hmi_communication.cpp  mc_communication.cpp  mc_communication_arm.cpp  mi_communication.cpp
src/compiler/: compile_message.cpp  compiler.cpp  compiler_data.cpp  lexer.cpp  parser.cpp
src/parameter/: backup_info.cpp  parm_manager.cpp  zip.cpp
src/pmc/: pmc_axis_ctrl.cpp  pmc_register.cpp
src/spindle/: spindle_control.cpp
src/tool_compensate/: rs274.cpp  tool_comp_data.cpp  tool_compensate.cpp  tool_math.cpp  tools_comp.cpp
文档/: alarm.md
